--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,7 @@ _UpgradeReport_Files/
 Thumbs.db
 Desktop.ini
 .DS_Store
+/.idea/.idea.bookish.dir/.idea/encodings.xml
+/.idea/.idea.bookish.dir/.idea/indexLayout.xml
+/.idea/.idea.bookish.dir/.idea/projectSettingsUpdater.xml
+/.idea/.idea.bookish.dir/.idea/vcs.xml
