--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,4 @@ Desktop.ini
 /.idea/.idea.bookish.dir/.idea/indexLayout.xml
 /.idea/.idea.bookish.dir/.idea/projectSettingsUpdater.xml
 /.idea/.idea.bookish.dir/.idea/vcs.xml
+.idea
