--- a/bookish-mvc/bookish-mvc/bookish-mvc.csproj
+++ b/bookish-mvc/bookish-mvc/bookish-mvc.csproj
@@ -5,5 +5,9 @@
         <RootNamespace>bookish_mvc</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Dapper" Version="2.0.30" />
+    </ItemGroup>
+
 
 </Project>
