--- a/bookish-mvc/bookish-mvc/bookish-mvc.csproj
+++ b/bookish-mvc/bookish-mvc/bookish-mvc.csproj
@@ -9,5 +9,9 @@
       <PackageReference Include="Dapper" Version="2.0.30" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Services" />
+    </ItemGroup>
+
 
 </Project>
