--- a/bookish-mvc/bookish-mvc/bookish-mvc.csproj
+++ b/bookish-mvc/bookish-mvc/bookish-mvc.csproj
@@ -7,10 +7,7 @@
 
     <ItemGroup>
       <PackageReference Include="Dapper" Version="2.0.30" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Services" />
+      <PackageReference Include="MySql.Data" Version="8.0.19" />
     </ItemGroup>
 
 
